--- a/Pages/account/Index.cshtml
+++ b/Pages/account/Index.cshtml
@@ -96,6 +96,22 @@
 <div class="row mb-2">
     <div class="col-lg-12 ec-info">
         <div class="container">
+            <!-- Account Information -->
+            <h4 class="d-flex justify-content-between align-items-center mb-3">Account Information</h4>
+            <div class="col">
+                <ul class="list-group mb-3">
+                    <li class="list-group-item d-flex lh-sm">
+                        <div class="label-col"><h6 class="my-0">Username</h6></div>
+                        <span>@Model.profileInfo.username</span>
+                    </li>
+                    <li class="list-group-item d-flex lh-sm">
+                        <div class="label-col"><h6 class="my-0">User Type</h6></div>
+                        <span>@Model.profileInfo.userType</span>
+                    </li>
+                </ul>
+            </div>
+            <br />
+
             @if (Model.UserType == "Admin")
             {
                 <!-- Personal Details -->
