--- a/Pages/account/Settings.cshtml
+++ b/Pages/account/Settings.cshtml
@@ -80,92 +80,104 @@
 <div class="row mb-2">
     <div class="col-lg-12 ec-info">
         <div class="container">
-            <form id="contactInformationForm" method="POST" asp-page-handler="ContactInformation">
-                <!-- Title -->
-                <div class="col-12 d-flex align-items-center justify-content-between">
-                    <h1><i class="bi bi-gear" style="padding: 0 5px 0 5px;"></i>Settings</h1>
-                </div>
-                <br />
-
-                <!-- Contact Information -->
-                <h4 class="d-flex justify-content-between align-items-center mb-3">Contact Information</h4>
-                <div class="col">
-                    <ul class="list-group mb-3">
-                        <li class="list-group-item d-flex lh-sm">
-                            <div class="label-col"><h6 class="my-0">Email Address</h6></div>
-                            <div class="input-col">
-                                <input type="text" class="form-control" name="emailAddress" value="@Model.profileInfo.emailAddress" required maxlength="65">
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex lh-sm">
-                            <div class="label-col"><h6 class="my-0">Mobile Number</h6></div>
-                            <div class="input-col">
-                                <input type="text" class="form-control" name="mobileNum" value="@Model.profileInfo.mobileNum" required maxlength="11">
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-
-
-                @if (Model.UserType == "EC Staff")
-                {
-                    <!-- Availability Status -->
+            @if (Model.UserType == "EC Staff" || Model.UserType == "LGU Staff")
+            {
+                <form id="contactInformationForm" method="POST" asp-page-handler="ContactInformation">
+                    <!-- Title -->
+                    <div class="col-12 d-flex align-items-center justify-content-between">
+                        <h1><i class="bi bi-gear" style="padding: 0 5px 0 5px;"></i>Settings</h1>
+                    </div>
                     <br />
-                    <h4 class="d-flex justify-content-between align-items-center mb-3">Availability Status</h4>
+
+                    <!-- Contact Information -->
+                    <h4 class="d-flex justify-content-between align-items-center mb-3">Contact Information</h4>
                     <div class="col">
                         <ul class="list-group mb-3">
                             <li class="list-group-item d-flex lh-sm">
-                                <div class="label-col"><h6 class="my-0">Status</h6></div>
-                                @if (Model.profileInfo.availabilityStatus == "On Duty")
-                                {
-                                    <select class="form-select short-dropdown" name="availabilityStatus" disabled>
-                                        <option value="On Duty" selected>On Duty</option>
-                                    </select>
-                                }
-                                else
-                                {
-                                    <select class="form-select short-dropdown" name="availabilityStatus" required onchange="handleAvailabilityStatusChange(this)">
-                                        <option value="" selected disabled>Select Availability Status</option>
-                                        @{
-                                            if (Model.profileInfo.availabilityStatus == "Available")
-                                            {
-                                                <option value="Available" selected>Available</option>
-                                            }
-                                            else
-                                            {
-                                                <option value="Available">Available</option>
-                                            }
-                                            if (Model.profileInfo.availabilityStatus == "On Leave")
-                                            {
-                                                <option value="On Leave" selected>On Leave</option>
-                                            }
-                                            else
-                                            {
-                                                <option value="On Leave">On Leave</option>
-                                            }
-                                            if (Model.profileInfo.availabilityStatus == "Inactive")
-                                            {
-                                                <option value="Inactive" selected>Inactive</option>
-                                            }
-                                            else
-                                            {
-                                                <option value="Inactive">Inactive</option>
-                                            }
-                                        }
-                                    </select>
-                                }
+                                <div class="label-col"><h6 class="my-0">Email Address</h6></div>
+                                <div class="input-col">
+                                    <input type="text" class="form-control" name="emailAddress" value="@Model.profileInfo.emailAddress" required maxlength="65">
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex lh-sm">
+                                <div class="label-col"><h6 class="my-0">Mobile Number</h6></div>
+                                <div class="input-col">
+                                    <input type="text" class="form-control" name="mobileNum" value="@Model.profileInfo.mobileNum" required maxlength="11">
+                                </div>
                             </li>
                         </ul>
                     </div>
-                }
-                <div class="edit-controls">
-                    <button type="button" class="btn btn-secondary" onclick="cancelContactInformation()">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="saveChangesButton">Save</button>
-                </div>
-            </form>
+
+
+                    @if (Model.UserType == "EC Staff")
+                    {
+                        <!-- Availability Status -->
+                        <br />
+                        <h4 class="d-flex justify-content-between align-items-center mb-3">Availability Status</h4>
+                        <div class="col">
+                            <ul class="list-group mb-3">
+                                <li class="list-group-item d-flex lh-sm">
+                                    <div class="label-col"><h6 class="my-0">Status</h6></div>
+                                    @if (Model.profileInfo.availabilityStatus == "On Duty")
+                                    {
+                                        <select class="form-select short-dropdown" name="availabilityStatus" disabled>
+                                            <option value="On Duty" selected>On Duty</option>
+                                        </select>
+                                    }
+                                    else
+                                    {
+                                        <select class="form-select short-dropdown" name="availabilityStatus" required onchange="handleAvailabilityStatusChange(this)">
+                                            <option value="" selected disabled>Select Availability Status</option>
+                                            @{
+                                                if (Model.profileInfo.availabilityStatus == "Available")
+                                                {
+                                                    <option value="Available" selected>Available</option>
+                                                }
+                                                else
+                                                {
+                                                    <option value="Available">Available</option>
+                                                }
+                                                if (Model.profileInfo.availabilityStatus == "On Leave")
+                                                {
+                                                    <option value="On Leave" selected>On Leave</option>
+                                                }
+                                                else
+                                                {
+                                                    <option value="On Leave">On Leave</option>
+                                                }
+                                                if (Model.profileInfo.availabilityStatus == "Inactive")
+                                                {
+                                                    <option value="Inactive" selected>Inactive</option>
+                                                }
+                                                else
+                                                {
+                                                    <option value="Inactive">Inactive</option>
+                                                }
+                                            }
+                                        </select>
+                                    }
+                                </li>
+                            </ul>
+                        </div>
+                    }
+                    <div class="edit-controls">
+                        <button type="button" class="btn btn-secondary" onclick="cancelContactInformation()">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="saveChangesButton">Save</button>
+                    </div>
+                </form>
+            }
 
             <!-- Change Password -->
             <form id="changePasswordForm" method="POST" asp-page-handler="ChangePassword">
+                @if (Model.UserType == "Admin")
+                {
+                    <!-- Title -->
+                    <div class="col-12 d-flex align-items-center justify-content-between">
+                        <h1><i class="bi bi-gear" style="padding: 0 5px 0 5px;"></i>Settings</h1>
+                    </div>
+                    <br />
+                }
+
                 <h4 class="d-flex justify-content-between align-items-center mb-3">Change Password</h4>
                 <div class="row justify-content-center">
                     <div class="col">
