--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -172,11 +172,11 @@
             <div class="infoitem">
                 <i class="bi bi-people"></i>
                 <div class="text">
-                    <h3 class="dashtitle">@Model.GetTotalDistinctEvacueesCount(Model.disasterInfo.disasterID)</h3>
+                    <h3 class="dashtitle">@Model.dashboardInfo.totalDistinctEvacuees</h3>
                     <p><b>Total Evacuees</b></p>
                     <div class="box-stat">
-                        <small>Check-in: <span>@Model.GetTotalCheckInCount(Model.disasterInfo.disasterID)</span></small>
-                        <small>Check-out: <span>@Model.GetTotalCheckOutCount(Model.disasterInfo.disasterID)</span></small>
+                        <small>Check-in: <span>@Model.dashboardInfo.totalCheckIn</span></small>
+                        <small>Check-out: <span>@Model.dashboardInfo.totalCheckOut</span></small>
                     </div>
                 </div>
             </div>
@@ -184,12 +184,12 @@
             <div class="infoitem">
                 <i class="bi bi-buildings-fill"></i>
                 <div class="text">
-                    <h3 class="dashtitle">@Model.GetTotalDistinctBarangaysCount(Model.disasterInfo.disasterID)</h3>
+                    <h3 class="dashtitle">@Model.dashboardInfo.totalDistinctBarangays</h3>
                     <p><b>Total Affected Brgys</b></p>
                     <div class="box-stat">
-                        <small>Families: <span>@Model.GetTotalDistinctFamiliesCount(Model.disasterInfo.disasterID)</span></small>
-                        <small>Male: <span>@Model.GetTotalDistinctFemaleCount(Model.disasterInfo.disasterID)</span></small>
-                        <small>Female: <span>@Model.GetTotalDistinctMaleCount(Model.disasterInfo.disasterID)</span></small>
+                        <small>Families: <span>@Model.dashboardInfo.totalDistinctFamilies</span></small>
+                        <small>Male: <span>@Model.dashboardInfo.totalDistinctFemale</span></small>
+                        <small>Female: <span>@Model.dashboardInfo.totalDistinctMale</span></small>
                     </div>
                 </div>
             </div>
@@ -197,11 +197,11 @@
             <div class="infoitem">
                 <i class="bi bi-building-fill"></i>
                 <div class="text">
-                    <h3 class="dashtitle">@Model.GetTotalCenterCount(Model.disasterInfo.disasterID)</h3>
+                    <h3 class="dashtitle">@Model.dashboardInfo.totalCenter</h3>
                     <p><b>Total Evacuation Centers</b></p>
                     <div class="box-stat">
-                        <small>Open: <span>@Model.GetTotalOpenCenterCount(Model.disasterInfo.disasterID)</span></small>
-                        <small>Closed: <span>@Model.GetTotalClosedCenterCount(Model.disasterInfo.disasterID)</span></small>
+                        <small>Open: <span>@Model.dashboardInfo.totalOpenCenter</span></small>
+                        <small>Closed: <span>@Model.dashboardInfo.totalClosedCenter</span></small>
                     </div>
                 </div>
             </div>
