changed database fetching of dashboard

--- a/Pages/Disaster/Profile/informationboard/Index.cshtml
+++ b/Pages/Disaster/Profile/informationboard/Index.cshtml
@@ -413,8 +413,8 @@
             </div>
             <div class="modal-body">
                 <p>Are you sure you want to close <b>@Model.logInfo.centerName</b>?</p>
-                <p>• Status of all entry logs will be set to <b class="text-danger">'Check-out'</b>.</p>
-                <p>• Status of all staff assignments will be set to <b class="text-danger">'Completed'</b>.</p>
+                <p>• Status of all entry logs will be set to <b class="text-primary">'Check-out'</b>.</p>
+                <p>• Status of all staff assignments will be set to <b class="text-primary">'Completed'</b>.</p>
                 <p class="text-danger"><b>This cannot be undone.</b></p>
             </div>
             <div class="modal-footer">
