--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -122,11 +122,11 @@
             <div class="info-item">
                 <i class="bi bi-people"></i>
                 <div class="text">
-                    <h3 class="distitle">@Model.GetTotalDistinctEvacueesCount()</h3>
+                    <h3 class="distitle">@Model.dashboardInfo.totalDistinctEvacuees</h3>
                     <p><b>Total Evacuees</b></p>
                     <div class="box-stat">
-                        <small>Check-in: <span>@Model.GetTotalCheckInCount()</span></small>
-                        <small>Check-out: <span>@Model.GetTotalCheckOutCount()</span></small>
+                        <small>Check-in: <span>@Model.dashboardInfo.totalCheckIn</span></small>
+                        <small>Check-out: <span>@Model.dashboardInfo.totalCheckOut</span></small>
                     </div>
                 </div>
             </div>
@@ -134,12 +134,12 @@
             <div class="info-item">
                 <i class="bi bi-buildings-fill"></i>
                 <div class="text">
-                    <h3 class="distitle">@Model.GetTotalDistinctBarangaysCount()</h3>
+                    <h3 class="distitle">@Model.dashboardInfo.totalDistinctBarangays</h3>
                     <p><b>Total Affected Brgys</b></p>
                     <div class="box-stat">
-                        <small>Families: <span>@Model.GetTotalDistinctFamiliesCount()</span></small>
-                        <small>Male: <span>@Model.GetTotalDistinctFemaleCount()</span></small>
-                        <small>Female: <span>@Model.GetTotalDistinctMaleCount()</span></small>
+                        <small>Families: <span>@Model.dashboardInfo.totalDistinctFamilies</span></small>
+                        <small>Male: <span>@Model.dashboardInfo.totalDistinctFemale</span></small>
+                        <small>Female: <span>@Model.dashboardInfo.totalDistinctMale</span></small>
                     </div>
                 </div>
             </div>  
@@ -147,11 +147,11 @@
             <div class="info-item">
                 <i class="bi bi-building-fill"></i></i>
                 <div class="text">
-                    <h3 class="distitle">@Model.GetTotalCenterCount()</h3>
+                    <h3 class="distitle">@Model.dashboardInfo.totalCenter</h3>
                     <p><b>Total Evacuation Centers</b></p>
                     <div class="box-stat">
-                        <small>Open: <span>@Model.GetTotalOpenCenterCount()</span></small>
-                        <small>Closed: <span>@Model.GetTotalClosedCenterCount()</span></small>
+                        <small>Open: <span>@Model.dashboardInfo.totalOpenCenter</span></small>
+                        <small>Closed: <span>@Model.dashboardInfo.totalClosedCenter</span></small>
                     </div>
                 </div>
             </div>
