--- a/Pages/Disaster/Profile/AllocateEC.cshtml
+++ b/Pages/Disaster/Profile/AllocateEC.cshtml
@@ -67,9 +67,9 @@
                                         <label class="form-check-label"></label>
                                     </div>
                                 </td>
-                                <td width="30%">@item.centerName</td>
+                                <td width="35%" style="text-align: left;">@item.centerName</td>
                                 <td width="20%" style="text-align: center;">@item.centerType</td>
-                                <td width="30%" style="text-align: center;">@item.barangayName</td>
+                                <td width="25%" style="text-align: center;">@item.barangayName</td>
                                 <td width="15%" style="text-align: center;">@item.maxCapacity</td>
                             </tr>
                         }
