--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -76,14 +76,14 @@
             <button class="btn btn-primary d-none d-md-inline-block text-white"
                     onclick="showInfo('@Model.disasterInfo.disasterType', '@Model.disasterInfo.description', '@Model.disasterInfo.dateOccured')"
                     data-bs-toggle="modal" data-bs-target="#infoModal">
-                <i class="bi bi-info-circle-fill" style="color:white"></i> Info
+                <i class="bi bi-info-circle-fill" style="padding-right: 5px;"></i> Info
             </button>
 
             <!-- Button with icon only (visible on smaller screens) -->
             <button class="btn btn-primary d-inline-block d-md-none text-white"
                     onclick="showInfo('@Model.disasterInfo.disasterType', '@Model.disasterInfo.description', '@Model.disasterInfo.dateOccured')"
                     data-bs-toggle="modal" data-bs-target="#infoModal">
-                <i class="bi bi-info-circle-fill" style="color:white"></i>
+                <i class="bi bi-info-circle-fill"></i>
             </button>
 
             <div class="d-inline position-relative">
@@ -202,9 +202,9 @@
             {
                 <tr>
                     <td width="5%">@counter</td>
-                    <td width="25%">@item.centerName</td>
-                    <td width="25%">@item.barangayName</td>
-                    <td width="20%">
+                    <td width="25%" style="text-align: left;">@item.centerName</td>
+                    <td width="20%">@item.barangayName</td>
+                    <td width="25%">
                         <div class="progress-container">
                             <!-- Progress bar will be added dynamically here -->
                         </div>
