--- a/Pages/disaster/profile/reliefgoodspack/Index.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Index.cshtml
@@ -185,15 +185,18 @@
 						<div class="d-flex align-items-center">
 							<h1>Relief Goods Pack</h1>
 						</div>
-
-						<div class="d-flex justify-content-end align-items-center">
-							<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/reliefgoodspack/add?centerLogID=@Model.logInfo.centerLogID">
-								<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Pack
-							</a>
-							<a class="btn btn-primary mb-2 d-sm-none" href="/disaster/profile/reliefgoodspack/add?centerLogID=@Model.logInfo.centerLogID">
-								<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
-							</a>
-						</div>
+						@if (Model.UserType == "Admin" || Model.UserType == "LGU Staff" || Model.assignmentInfo.status == "Assigned")
+						{
+							<div class="d-flex justify-content-end align-items-center">
+								<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/reliefgoodspack/add?centerLogID=@Model.logInfo.centerLogID">
+									<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Pack
+								</a>
+								<a class="btn btn-primary mb-2 d-sm-none" href="/disaster/profile/reliefgoodspack/add?centerLogID=@Model.logInfo.centerLogID">
+									<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
+								</a>
+							</div>
+						}
+						
 					</div>
 				</div>
 				
@@ -234,7 +237,7 @@
 											<span class="badge rounded-pill bg-light">@item.status</span>
 										}
 									</td>
-									@if (!string.IsNullOrEmpty(Model.assignmentInfo.status))
+									@if (Model.assignmentInfo.status == "Assigned")
 									{
 										<td width="15%">
 											@if (@item.status == "Distributed")
@@ -275,17 +278,17 @@
 														View Distribution Record
 													</a>
 												</li>
-												@if (@Model.logInfo.status == "Open")
+												@if (Model.UserType == "Admin" || Model.UserType == "LGU Staff" || Model.assignmentInfo.status == "Assigned")
 												{
-													<li>
-														<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.packID')"
-														   data-deleteid="@item.packID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
-															Delete
-														</a>
-													</li>
-												}
-												else if (@Model.logInfo.status == "Closed")
-												{
+													@if (@Model.logInfo.status == "Open" && @item.remainingQty == @item.packQty)
+													{
+														<li>
+															<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.packID')"
+															   data-deleteid="@item.packID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
+																Delete
+															</a>
+														</li>
+													}
 												}
 											</ul>
 										</div>
