--- a/Pages/AccessDenied.cshtml
+++ b/Pages/AccessDenied.cshtml
@@ -4,4 +4,26 @@
 	ViewData["Title"] = "Access Denied";
 }
 
-<p>Access Denied!</p>
+<style>
+    .custom-margin {
+        margin-top: 150px;
+        margin-bottom: 300px;
+    }
+
+    .big-red-circle {
+        font-size: 5em; 
+        color: red;
+    }
+</style>
+
+<div class="container justify-content-center text-center custom-margin">
+    <div class="mb-2">
+        <i class="bi bi-x-circle-fill big-red-circle"></i>
+    </div>
+    <h1 style="color:dimgray">Access Denied</h1>
+    <br />
+    <p style="color:dimgray">You do not have permission to view this page.</p>
+    <p style="color:dimgray">Please check your credentials and try again.</p>
+</div>
+
+
