--- a/Pages/AccessDenied.cshtml
+++ b/Pages/AccessDenied.cshtml
@@ -5,9 +5,13 @@
 }
 
 <style>
+
     .custom-margin {
-        margin-top: 150px;
-        margin-bottom: 300px;
+        margin-top: 100px;
+        margin-bottom: 200px;
+        background-color: #F7F7F7; /* Adjust the background color */
+        border-radius: 20px; /* Adjust the border-radius for a more rounded or less rounded shape */
+        padding: 20px;
     }
 
     .big-red-circle {
@@ -24,6 +28,10 @@
     <br />
     <p style="color:dimgray">You do not have permission to view this page.</p>
     <p style="color:dimgray">Please check your credentials and try again.</p>
+
+    <a href="/index" class="btn btn-secondary btn-rounded mt-4 mb-2" style="color: dimgray">
+        <i class="bi bi-house-fill" style="color: dimgray"></i> Home
+    </a>
 </div>
 
 
